Fixed background and fire follows more closely as it scales up and down behind ship

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 
 body {
   background-image: url("../public/space-stars.avif");
+  background-size: cover;
+  background-repeat: no-repeat;
   font-family: 'Orbitron', sans-serif;
   cursor: none;
 }
